--- a/app/src/main/res/layout/activity_profile_user.xml
+++ b/app/src/main/res/layout/activity_profile_user.xml
@@ -59,6 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans_light"
                     android:text="USER PROFILE INFORMATION"
                     android:textColor="@color/white"
                     android:textSize="22sp"
@@ -72,6 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="First Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -98,6 +100,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Last Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -124,6 +127,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Date of Birth"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -150,6 +154,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Address"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -176,6 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Driver's License Number"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -202,6 +208,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Emergency Contact Number"
                     android:textColor="@color/white"
                     android:textSize="18sp"
@@ -229,6 +236,7 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="40dp"
                     android:backgroundTint="@color/logo"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="edit_vehicle"
                     android:text="Edit Vehicles"
                     app:layout_constraintStart_toStartOf="parent"
@@ -242,6 +250,7 @@
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="45dp"
                     android:backgroundTint="@color/logo"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="edit_insurance"
                     android:text="Edit Insurance"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -254,6 +263,7 @@
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="save"
                     android:text="Save"
                     android:textSize="18dp"
