--- a/app/src/main/res/layout/activity_step2.xml
+++ b/app/src/main/res/layout/activity_step2.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/open_sans"
                 android:gravity="center"
                 android:text="@string/step2firstString"
                 android:textColor="@color/white"
@@ -63,8 +64,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/step2firstTv"
                 android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/open_sans"
                 android:gravity="center"
                 android:text="@string/step2secondString"
                 android:textColor="@color/white"
@@ -79,8 +80,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/step2secondTv"
                 android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/open_sans"
                 android:gravity="center"
                 android:text="@string/step2thirdString"
                 android:textColor="@color/white"
@@ -95,8 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/step2thirdTv"
                 android:layout_centerInParent="true"
-                android:layout_centerVertical="true"
                 android:layout_gravity="center_horizontal"
+                android:fontFamily="@font/open_sans"
                 android:gravity="center"
                 android:text="@string/step2fourthString"
                 android:textColor="@color/white"
