--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -59,6 +59,7 @@
                     android:layout_marginTop="60dp"
                     android:layout_marginEnd="75dp"
                     android:layout_marginBottom="107dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Gallery"
                     app:layout_constraintBottom_toTopOf="@id/imageView"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +74,7 @@
                     android:layout_marginStart="75dp"
                     android:layout_marginTop="60dp"
                     android:layout_marginBottom="107dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Camera"
                     app:layout_constraintBottom_toTopOf="@id/imageView"
                     app:layout_constraintStart_toStartOf="parent"
