--- a/app/src/main/res/layout/activity_final_exchange.xml
+++ b/app/src/main/res/layout/activity_final_exchange.xml
@@ -33,8 +33,6 @@
             android:layout_height="wrap_content">
 
 
-
-
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
@@ -42,10 +40,11 @@
                 android:layout_below="@+id/logo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
+                android:fontFamily="@font/open_sans"
                 android:text=" Final Check"
-                android:textSize="40sp"
                 android:textAlignment="center"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="40sp" />
 
         </RelativeLayout>
 
@@ -62,8 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:text="  1"
-                android:textSize="25sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/lastName"
