--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,44 +24,49 @@
                 android:id="@+id/greeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:fontFamily="@font/open_sans"
                 android:text="Welcome!"
+                android:textColor="@color/white"
                 android:textSize="28sp"
-                app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />
 
             <Button
                 android:id="@+id/step_by_step"
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:text="Report Accident(Step-By-Step)"
                 android:layout_marginTop="120dp"
+                android:fontFamily="@font/open_sans"
+                android:backgroundTint="@color/white"
                 android:onClick="onClick"
-                app:layout_constraintTop_toBottomOf="@id/greeting"
+                android:text="Report Accident(Step-By-Step)"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/greeting" />
 
             <Button
                 android:id="@+id/info_exchange"
                 android:layout_width="140dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="40dp"
-                android:text="Information\n Exchange"
+                android:fontFamily="@font/open_sans"
+                android:backgroundTint="@color/white"
                 android:onClick="onClick"
-                android:backgroundTint="@color/logo"
-                app:layout_constraintTop_toBottomOf="@id/step_by_step"
+                android:text="Information\n Exchange"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/step_by_step" />
 
             <Button
                 android:id="@+id/handbook"
                 android:layout_width="140dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
+                android:fontFamily="@font/open_sans"
+                android:backgroundTint="@color/white"
                 android:onClick="onClick"
                 android:text="Handbook"
-                android:backgroundTint="@color/logo"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/info_exchange" />
@@ -71,12 +76,13 @@
                 android:layout_width="140dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="25dp"
-                android:text="View Reports"
+                android:fontFamily="@font/open_sans"
+                android:backgroundTint="@color/white"
                 android:onClick="onClick"
-                android:backgroundTint="@color/logo"
-                app:layout_constraintTop_toBottomOf="@id/handbook"
+                android:text="View Reports"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"/>
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/handbook" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
