--- a/app/src/main/res/layout/activity_profile_insurance.xml
+++ b/app/src/main/res/layout/activity_profile_insurance.xml
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/open_sans"
         android:text="Insurance Provider"
         android:textColor="@color/white"
         android:textSize="18dp"
@@ -83,6 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/open_sans"
         android:text="Policy/Account Number"
         android:textColor="@color/white"
         android:textSize="18dp"
@@ -109,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/open_sans"
         android:text="Policy/Account Holder"
         android:textColor="@color/white"
         android:textSize="18dp"
@@ -136,6 +139,7 @@
         android:layout_marginStart="45dp"
         android:layout_marginTop="44dp"
         android:backgroundTint="@color/logo"
+        android:fontFamily="@font/open_sans"
         android:onClick="edit_profile"
         android:text="Edit Profile"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,6 +153,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="45dp"
         android:backgroundTint="@color/logo"
+        android:fontFamily="@font/open_sans"
         android:onClick="edit_vehicle"
         android:text="Edit Vehicles"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,6 +165,7 @@
         android:id="@+id/save"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:fontFamily="@font/open_sans"
         android:onClick="save"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
