--- a/app/src/main/res/layout/activity_profile_vehicle.xml
+++ b/app/src/main/res/layout/activity_profile_vehicle.xml
@@ -16,9 +16,7 @@
 
         <include
             layout="@layout/main_toolbar"/>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileVehicle"
@@ -64,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans_light"
                     android:text="VEHICLE INFORMATION"
                     android:textColor="@color/white"
                     android:textSize="22dp"
@@ -89,6 +88,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Vehicle Make"
                     android:textColor="@color/white"
                     android:textSize="18dp"
@@ -115,6 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Vehicle Year"
                     android:textColor="@color/white"
                     android:textSize="18dp"
@@ -141,6 +142,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Vehicle License Plate Number"
                     android:textColor="@color/white"
                     android:textSize="18dp"
@@ -167,6 +169,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="State Vehicle is Registered"
                     android:textColor="@color/white"
                     android:textSize="18dp"
@@ -193,6 +196,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_marginTop="40dp"
+                    android:fontFamily="@font/open_sans"
                     android:text="Type of Vehicle"
                     android:textColor="@color/white"
                     android:textSize="18dp"
@@ -220,6 +224,7 @@
                     android:layout_marginStart="45dp"
                     android:layout_marginTop="50dp"
                     android:backgroundTint="@color/logo"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="edit_profile"
                     android:text="Edit Profile"
                     app:layout_constraintStart_toStartOf="parent"
@@ -232,6 +237,7 @@
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="45dp"
                     android:backgroundTint="@color/logo"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="edit_Insurance"
                     android:text="Edit Insurance"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -243,6 +249,7 @@
                     android:id="@+id/save"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
+                    android:fontFamily="@font/open_sans"
                     android:onClick="save"
                     android:text="Save"
                     app:layout_constraintBottom_toBottomOf="parent"
