--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,13 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="btnColor">#549F93</color>
+    <color name="newButtonGray">#d8d4d4</color>
 
     <color name="backgroundColor">#04132c</color>
-    <color name="background">#0F2355</color>
+    <color name="background3">#0F2355</color>
+    <color name="background">#6096BA</color>
     <color name="logo">#3B6BfB</color>
+    <color name="buttonColor1">#2DD881</color>
     <color name="gradient_start">#04132C</color>
     <color name="gradient_end">#3B6BfB</color>
     <color name="gray">#808080</color>
